# beacon_auth

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  rslib.config.ts  tsconfig.json  vcpkg.json  vite.config.ts  wrangler.jsonc  wrangler.toml  wrangler.workers.jsonc
.github/: copilot-instructions.md
.github/workflows/: _build-binaries.yml  build.yml  deploy-cloudflare-pages.yml  deploy-cloudflare-worker.yml  deploy-cloudflare.yml  mod.yml  release.yml
crates/beacon/: Cargo.toml  build.rs
crates/beacon-core/: Cargo.toml
crates/beacon-core/src/: crypto.rs  lib.rs  models.rs  oauth.rs  password.rs  username.rs
crates/beacon-frontend-embed/: Cargo.toml  build.rs
crates/beacon-frontend-embed/src/: lib.rs
crates/beacon-lambda/: Cargo.toml
crates/beacon-lambda/src/: main.rs
crates/beacon-worker/: Cargo.toml  wrangler.toml
crates/beacon-worker/migrations/: 0001_init.sql  0002_identities.sql
crates/beacon-worker/src/: lib.rs  wasm.rs
crates/beacon-worker/src/wasm/: db.rs  jwt.rs  kv.rs  state.rs  util.rs
crates/beacon-worker/src/wasm/db/: d1_entity.rs  mod.rs
crates/beacon-worker/src/wasm/handlers/: config.rs  identity.rs  migrations.rs  minecraft.rs  mod.rs  oauth.rs  passkey.rs  session.rs
crates/beacon/src/: app_state.rs  config.rs  crypto.rs  main.rs  models.rs  server.rs
crates/beacon/src/handlers/: auth.rs  identity.rs  mod.rs  passkey.rs  user.rs
crates/entity/: Cargo.toml
crates/entity/src/: identity.rs  jwks_key.rs  lib.rs  passkey.rs  passkey_state.rs  refresh_token.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250124_000001_create_all_tables.rs
messages/: en.json  zh-CN.json
modSrc/: build.gradle.kts  settings.gradle.kts
modSrc/common/: build.gradle.kts
modSrc/common-1.20.1/: build.gradle.kts
modSrc/common-1.20.1/src/main/java/io/github/summpot/beaconauth/login/: LoginQueryType.java  LoginVerificationStatus.java  ServerLoginNegotiation.java
modSrc/common-1.20.1/src/main/java/io/github/summpot/beaconauth/mixin/: ClientCommonPacketListenerImplMixin.java  ClientHandshakePacketListenerImplMixin.java  ServerLoginPacketListenerImplMixin.java  ServerboundChatCommandSignedPacketMixin.java  ServerboundChatSessionUpdatePacketMixin.java
modSrc/common-1.20.1/src/main/kotlin/io/github/summpot/beaconauth/client/: AuthClient.kt
modSrc/common-1.20.1/src/main/kotlin/io/github/summpot/beaconauth/command/: AuthCommand.kt
modSrc/common-1.20.1/src/main/kotlin/io/github/summpot/beaconauth/config/: BeaconAuthConfig.kt  ServerConfig.kt
modSrc/common-1.20.1/src/main/kotlin/io/github/summpot/beaconauth/network/: AuthResultPacket.kt  LoginUrlPacket.kt  VerifyAuthPacket.kt
modSrc/common-1.20.1/src/main/kotlin/io/github/summpot/beaconauth/server/: AuthServer.kt  ServerLoginHandler.kt
modSrc/common-1.20.1/src/main/kotlin/io/github/summpot/beaconauth/util/: PKCEUtils.kt
modSrc/common-1.20.1/src/main/resources/assets/beaconauth/lang/: en_us.json  zh_cn.json
modSrc/common-1.20.1/src/versioned/java/io/github/summpot/beaconauth/mixin/: ServerLoginPacketListenerImplMixin.java
modSrc/common-1.20.1/src/versioned/kotlin/io/github/summpot/beaconauth/client/: ClientLoginHandler.kt
modSrc/common-1.20.1/src/versioned/kotlin/io/github/summpot/beaconauth/config/: BeaconAuthConfig.kt
modSrc/common-1.20.1/src/versioned/kotlin/io/github/summpot/beaconauth/login/: LoginQueryType.kt  ServerLoginNegotiation.kt
modSrc/common-1.20.1/src/versioned/kotlin/io/github/summpot/beaconauth/server/: ServerLoginHandler.kt
modSrc/common-1.20.1/src/versioned/resources/: beaconauth.mixins.json
modSrc/common-1.21.1/: build.gradle.kts
modSrc/common-1.21.1/src/main/java/io/github/summpot/beaconauth/mixin/: ServerLoginPacketListenerImplMixin.java  ServerboundChatCommandSignedPacketMixin.java
modSrc/common-1.21.1/src/main/kotlin/io/github/summpot/beaconauth/: BeaconAuthMod.kt
modSrc/common-1.21.1/src/main/kotlin/io/github/summpot/beaconauth/config/: BeaconAuthConfig.kt
modSrc/common-1.21.1/src/main/kotlin/io/github/summpot/beaconauth/network/: ModPackets.kt
modSrc/common-1.21.1/src/main/kotlin/io/github/summpot/beaconauth/server/: ServerLoginHandler.kt
modSrc/common-1.21.1/src/main/kotlin/io/github/summpot/beaconauth/util/: TranslationHelper.kt
modSrc/common-1.21.1/src/main/resources/: beaconauth.mixins.json
modSrc/common-1.21.1/src/versioned/resources/: beaconauth.mixins.json
modSrc/common-1.21.8/: build.gradle.kts
modSrc/common-1.21.8/src/main/resources/: beaconauth.mixins.json
modSrc/common-1.21.8/src/main/resources/assets/beaconauth/lang/: zh_cn.json
modSrc/common/src/main/kotlin/io/github/summpot/beaconauth/: BeaconAuthMod.kt
modSrc/common/src/main/resources/: beaconauth.mixins.json
modSrc/common/src/main/resources/assets/beaconauth/lang/: en_us.json
modSrc/fabric/: build.gradle.kts
modSrc/fabric-1.20.1/: build.gradle.kts
modSrc/fabric-1.21.1/: build.gradle.kts
modSrc/fabric-1.21.1/src/main/resources/: fabric.mod.json
modSrc/fabric-1.21.8/: build.gradle.kts
modSrc/fabric-1.21.8/src/main/resources/: fabric.mod.json
modSrc/fabric/src/main/resources/: fabric.mod.json
modSrc/forge/: build.gradle.kts
modSrc/forge-1.20.1/: build.gradle.kts
modSrc/forge/src/main/resources/: pack.mcmeta
modSrc/neoforge-1.21.1/: build.gradle.kts
modSrc/neoforge-1.21.1/src/main/resources/: pack.mcmeta
modSrc/neoforge-1.21.8/: build.gradle.kts
modSrc/neoforge-1.21.8/src/main/resources/: pack.mcmeta
project.inlang/: project_id
scripts/: sync-worker-assets.mjs
src/: _worker.ts  index.css  routeTree.gen.ts  router.tsx  server.ts  start.ts  styles.css
src/components/: beacon-icon.tsx  language-toggle.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/minecraft/: minecraft-flow-alert.tsx
src/components/ui/: button.tsx
src/lib/: i18n.ts  motion.ts
src/routes/: $lang.tsx  __root.tsx  error.tsx  index.tsx  login.tsx  oauth-complete.tsx  profile.tsx  register.tsx  settings.tsx
src/utils/: api.ts
(+49 files in other folders)
