[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
# Web Framework
actix-web = "4.12"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-rust-embed-responder = "2.3"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }

# JWT & Crypto
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
ecdsa = { version = "0.16", features = ["signing"] }
sha2 = "0.10"
bcrypt = "0.17"
rand = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Async Runtime
tokio = { version = "1.48", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
rust-embed = { version = "8.9", features = ["interpolate-folder-path"] }
mime_guess = "2.0"
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
urlencoding = "2.1"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }

# WebAuthn
webauthn-rs = "0.5"
webauthn-rs-proto = "0.5"

# Cache
moka = { version = "0.12", features = ["sync"] }

# Build Tools
which = "8.0"
