[package]
name = "beacon-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "beacon_core"
path = "src/lib.rs"

[features]
# Keep passkey-related model types behind a feature so wasm/Workers builds can opt out.
default = ["passkey"]
passkey = ["dep:webauthn-rs"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
p256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }

# Optional (native/server) passkey types
webauthn-rs = { workspace = true, optional = true }
