[package]
name = "beacon-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Workers build expects a wasm cdylib. Keeping rlib allows `cargo check` on non-wasm hosts.
crate-type = ["cdylib", "rlib"]

[dependencies]
beacon-core = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { workspace = true }
console_error_panic_hook = { workspace = true }

# Help rand/getrandom work reliably on wasm.
getrandom = { workspace = true }
getrandom02 = { workspace = true }
