[package]
name = "beacon-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Workers build expects a wasm cdylib. Keeping rlib allows `cargo check` on non-wasm hosts.
crate-type = ["cdylib", "rlib"]

[dependencies]
beacon-core = { workspace = true, default-features = false }
beacon-passkey = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

# Passkeys / WebAuthn (wasm-safe)
url = { workspace = true }
uuid = { workspace = true, features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { workspace = true }
console_error_panic_hook = { workspace = true }

# Use the Summpot SeaORM fork with libsql support.
sea-orm = { git = "https://github.com/Summpot/sea-orm.git", branch = "libsql", default-features = false, features = ["libsql", "macros"] }

# Help rand/getrandom work reliably on wasm.
getrandom = { workspace = true }
getrandom02 = { workspace = true }
