[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[lib]
name = "beacon_lib"
path = "src/lib.rs"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
# Web Framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Shared core (crypto + API models)
beacon-core = { workspace = true, features = ["passkey"] }

# Database
sea-orm = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }

# JWT & Crypto
jsonwebtoken = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
dotenvy = { workspace = true, features = ["clap", "cli"] }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
actix-files = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
urlencoding.workspace = true

# HTTP Client
reqwest = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true, features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = { workspace = true }

# Redis (optional)
redis = { workspace = true }

# Cache
moka = { workspace = true }
