[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { workspace = true }

# We intentionally disable default features (which include the CLI stack) so this crate can be
# linked into Cloudflare Workers (wasm32) without pulling in native runtime dependencies.

[target.'cfg(target_arch = "wasm32")'.dependencies]
sea-orm-migration = { git = "https://github.com/Summpot/sea-orm.git", branch = "libsql", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sea-orm-migration = { git = "https://github.com/Summpot/sea-orm.git", branch = "libsql", default-features = false }

# Native-only tooling uses Tokio + direct sea-orm connections.
tokio = { workspace = true }
sea-orm = { workspace = true }
